Add some more div containers

--- a/index.html
+++ b/index.html
@@ -5,48 +5,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header class="header">
+    <header>
         <div class="top-links">
-            Header Logo
+            <p class="header-logo-text">Header Logo</p>
             <ul>
                 <li>header link one</li>
                 <li>header link two</li>
                 <li>header link three</li>
             </ul>
         </div>
-        <div class="header-body">
-            <div class="header-title-content">
-                <p class="header-title">This website is awesome</p>
-                <p class="header-subtext">This website has some subtext that goes under the main title. It's smaller font and the colour is lower contrast.</p>
+        <div class="hero">
+            <div class="hero-content">
+                <p class="hero-title">This website is awesome</p>
+                <p class="hero-subtext">This website has some subtext that goes under the main title. It's smaller font and the colour is lower contrast.</p>
                 <button class="sign-up">
                     Sign up
                 </button>
             </div>
-            <div class="header-image">
-                this is a place holder for an image
+            <div class="hero-image">
+                <p>this is a place holder for an image</p> 
             </div>
         </div>
     </header>
     <main>
         <div class="content-container">
             <h1>Some random information.</h1>
-            <div class="item">
-                <div class="item-image"></div>
-                <div class="item-text">this is some subtext under an illustration or image</div>
-            </div>
-            <div class="item">
-                <div class="item-image"></div>
-                <div class="item-text">this is some subtext under an illustration or image</div>
-            </div>
-            <div class="item">
-                <div class="item-image"></div>
-                <div class="item-text">this is some subtext under an illustration or image</div>
-            </div>
-            <div class="item">
-                <div class="item-image"></div>
-                <div class="item-text">this is some subtext under an illustration or image</div>
+            <div class="item-container">
+                <div class="item">
+                    <div class="item-image"></div>
+                    <div class="item-text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="item">
+                    <div class="item-image"></div>
+                    <div class="item-text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="item">
+                    <div class="item-image"></div>
+                    <div class="item-text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="item">
+                    <div class="item-image"></div>
+                    <div class="item-text">this is some subtext under an illustration or image</div>
+                </div>
             </div>
         </div>
         <div class="quote-container">
@@ -59,12 +62,12 @@
                     <p class="call-to-action-title">Call to action! It's time!</p>
                     <p class="call-to-action-subtext">Sign up for our product by clicking that button right over there!</p>
                 </div>
-                <button class="sign-up call-to-action">Sign-up</button>
+                <button class="sign-up">Sign-up</button>
             </div>
         </div>
     </main>
     <footer>
-        Copyright &copy; The Odin Project
+        Copyright &copy; The Odin Project 2022
     </footer>
 </body>
 </html>
