Change some div's to use proper HTML syntax

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
     </header>
     <main>
-        <div class="content-container">
+        <section class="information">
             <h1>Some random information.</h1>
             <div class="item-container">
                 <div class="item">
@@ -51,12 +51,12 @@
                     <div class="item-text">this is some subtext under an illustration or image</div>
                 </div>
             </div>
-        </div>
-        <div class="quote-container">
+        </section>
+        <section class="quote-container">
             <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
             <p class="quote-author">-Thor, God of Thunder</p>
-        </div>
-        <div class="call-to-action-container">
+        </section>
+        <section class="call-to-action-container">
             <div class="call-to-action">
                 <div class="call-to-action-text">
                     <p class="call-to-action-title">Call to action! It's time!</p>
@@ -64,7 +64,7 @@
                 </div>
                 <button class="sign-up">Sign-up</button>
             </div>
-        </div>
+        </section>
     </main>
     <footer>
         Copyright &copy; The Odin Project 2022
