--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
         </section>
         <section class="quote-container">
-            <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <cite class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</cite>
             <p class="quote-author">-Thor, God of Thunder</p>
         </section>
         <section class="call-to-action-container">
